Closed Bug 507338 Opened 16 years ago Closed 16 years ago

[WinCE] updater.exe update in progress dialog isn't displayed

Categories

(Toolkit :: Application Update, defect)

ARM
Windows CE
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.2b1
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)

References

Details

(Keywords: verified1.9.2, Whiteboard: [nv])

Attachments

(3 files, 4 obsolete files)

It hasn't been implemented as of yet.
Whiteboard: [nv]
Shows that the update dialog is centered
Blocks: 508905
Attached patch patch in progress rev2 (obsolete) — Splinter Review
Still needs to handle device screen dimensions smaller than the dialog. There is also a strange bug when running this on the nv device in that ResizeDialogToFit subsequent code to fail though it does work if there is a MessageBox just after the call to DrawText while this works fine in an emulator. *scratches head*
Attachment #393124 - Attachment is obsolete: true
Attached patch patch rev1 (obsolete) — Splinter Review
After getting everything working on an emulator I tested on an nv device and ended up running into a couple of idiosyncrasies with it. SendDlgItemMessage wasn't working so I switched to using GetDlgItem and SendMessage. Nothing after the ResizeDialogToFit function was called. Turned out that even though the call to DrawText was succeeding CE would bail later on. Using szwInfo fixed this. I went with a smaller dialog in updater.rc for WINCE since the screen real estate is smaller... it is resized as needed. I still need to handle resizing using multiple lines when there isn't enough screen real estate but I'd prefer to do that in another bug.
Attachment #394000 - Attachment is obsolete: true
Attachment #394150 - Flags: review?(vladimir)
Comment on attachment 394150 [details] [diff] [review] patch rev1 Brad, could you also review this? Thanks
Attachment #394150 - Flags: review?(bugmail)
Comment on attachment 394150 [details] [diff] [review] patch rev1 >+OS_LIBS += $(call EXPAND_LIBNAME,commctrl ws2) >+DEFINES += -DUNICODE -D_UNICODE -DWINCE We should have WINCE defined in autoconf.mk. Also, arm-wince-gcc defines UNICODE. Is this needed for RC?
Attachment #394150 - Flags: review?(bugmail) → review+
It was needed for the RC but since the RC had so many ifdefs I went with a separate one for WINCE to clean it up a bit.
Attachment #394150 - Attachment is obsolete: true
Attachment #394217 - Flags: review?(vladimir)
Attachment #394150 - Flags: review?(vladimir)
forgot to add the fix for bug 508905
Attachment #394217 - Attachment is obsolete: true
Attachment #394218 - Flags: review?(vladimir)
Attachment #394217 - Flags: review?(vladimir)
Filed bug 510162 for using multiple lines for the info text when appropriate.
Requesting blocking... we need this to show the updater ui for nv.
Flags: blocking1.9.2?
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Attachment #394218 - Flags: approval1.9.2?
Flags: blocking1.9.2? → blocking1.9.2+
Attachment #394218 - Flags: approval1.9.2?
Keywords: fixed1.9.2
Target Milestone: --- → mozilla1.9.2b1
Verified fixed on 1.9.2 using Mozilla/5.0 (Windows; U; WindowsCE 6.0; en-US; rv:1.9.2a2pre) Gecko/20090905 Firefox/3.6a2pre. Adding keyword.
Keywords: verified1.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: