Bug 507338 - [WinCE] updater.exe update in progress dialog isn't displayed. r=blassey, r=vlad